...
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_number_questions"
                        style="@style/default_app_input_x"/>

                    <EditText
                        android:id="@+id/edt_number_questions"
                        android:numeric="integer"
                        style="@style/default_app_input_xx"/>
...
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_overall_score"
                        style="@style/default_app_input_x"/>

                    <EditText
                        android:id="@+id/edt_overall_score"
                        android:numeric="integer"
                        style="@style/default_app_input_xx"/>
...
                <TextView
                    android:id="@+id/txt_choose_question_weight"
                    style="@style/style_text_x"
                    android:text="@string/text_choose_question_weight"/>

                <Button
                    android:id="@+id/btn_equal_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_font"
                    android:textColor="@color/white"
                    android:background="@drawable/button_round_gold"
                    android:paddingLeft="@dimen/normal_margin"
...
